Update license to Unlicense in documentation and composer.json

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "artryazanov/laravel-wikipedia-games-db",
   "description": "A Laravel package to build a video game database by scraping English Wikipedia.",
   "type": "laravel-package",
-  "license": "MIT",
+  "license": "Unlicense",
   "authors": [
     {
       "name": "Artryazanov"
