Add tests, CI workflows, and development dependencies
- Create PHPUnit configuration and base `TestCase`.
- Add tests for `ProcessCategoryJob`, `ProcessGamePageJob`, and `ScrapeWikipediaCommand`.
- Configure GitHub workflows for code style checks (Pint) and test execution.
- Update `composer.json` with development dependencies and test script.

--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,19 @@
       ]
     }
   },
+  "scripts": {
+    "test": "vendor/bin/phpunit"
+  },
+  "require-dev": {
+    "orchestra/testbench": "^8.0|^9.0|^10.0",
+    "phpunit/phpunit": "^10.5|^11.0",
+    "laravel/pint": "^1.24"
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
   "config": {
     "sort-packages": true
   },
